--- a/client/public/css/kiken.css
+++ b/client/public/css/kiken.css
@@ -43,7 +43,7 @@ table, td, th {
     /* background: url('https://img.freepik.com/free-photo/top-view-desk-concept-with-laptop_23-2148236857.jpg?w=1380&t=st=1682603942~exp=1682604542~hmac=f00b49a52ae3c1759c4de8e03b9c070389225ec8f99f40975d1c4d967c9a356b') no-repeat center center fixed;  */
     /* background-image: linear-gradient(to left, #c8ecff, #a2dafc, #7bc7f9, #51b4f7, #02a0f4); */
     background: url('/img/bglogin.png') no-repeat center center fixed!important;
-    -webkit-background-size: cover;
+    -webkit-background-size: cover!important;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
